# epcforedge

./: .env  .gitignore  README.md  docker-compose.yml  go.mod  go.sum
5g/pkt-replay/: Makefile  README.md  pkt_replay.c  test.pcap
backend/: CMakeLists.txt  Makefile  README.md  setup_env.sh
backend/api_handler/: CMakeLists.txt  CpfInterface.cpp  CpfInterface.h  CupsMgmtInterface.cpp  CupsMgmtInterface.h  HandlerCommon.h  LocalConfig.cpp  LocalConfig.h  UpfController.cpp  UpfController.h  main.cpp
backend/test/api_test/: README.md  del_userplanes_id.sh  del_userplanes_notfound.sh  get_userplanes_all.sh  get_userplanes_id.sh  get_userplanes_notfound.sh  patch_userplanes.sh  post_userplanes.json  post_userplanes.sh
backend/test/unit_test/: README.md
backend/test/unit_test/scripts/: CMakeLists_oamagent.txt  ut-test  ut_http.conf
backend/test/unit_test/scripts/ssl/: README.md
backend/test/unit_test/test_app/: CMakeLists.txt  main.cpp
backend/test/unit_test/test_app/common/: TestUtility.cpp  TestUtility.h  TesterBase.cpp  TesterBase.h  TesterFramework.cpp  TesterFramework.h
backend/test/unit_test/test_app/json_payload/: PgwGetAPNWRONGRspData.json  PgwGetAllRspData.json  PgwGetNoSgwTacRspData.json  PgwGetOneRspData.json  PostUserplanes.json  PostUserplanesPgwNoS5U.json  PostUserplanesPgwNoSelector.json  SgwGetIdNotMatchRspData.json  SgwGetInvalidRspData.json  SgwGetOneRspData.json  SgwGetTacNotMatchRspData.json
backend/test/unit_test/test_app/test_cases/: DelUserplanesTester.cpp  DelUserplanesTester.h  GetUserplanesTester.cpp  GetUserplanesTester.h  PatchUserplanesTester.cpp  PatchUserplanesTester.h  PostUserplanesTester.cpp  PostUserplanesTester.h
backend/utils/: CMakeLists.txt
backend/utils/exception/: CMakeLists.txt  Exception.cpp  Exception.h
backend/utils/framework/: CMakeLists.txt  DelRequestDispatcher.cpp  DelRequestDispatcher.h  DelRequestHandler.h  FcgiBackend.cpp  FcgiBackend.h  GetRequestDispatcher.cpp  GetRequestDispatcher.h  GetRequestHandler.h  PatchRequestDispatcher.cpp  PatchRequestDispatcher.h  PatchRequestHandler.h  PostRequestDispatcher.cpp  PostRequestDispatcher.h  PostRequestHandler.h  RawRequest.cpp  RawRequest.h
backend/utils/log/: CMakeLists.txt  Log.cpp  Log.h
cnca/: go.mod
cnca/cli/: go.sum  lte-userplane.yml  main.go  ngc-subscription.yml
cnca/cli/cmd/: apply.go  callouts.go  cnca.go  get.go  go.mod  go.sum  model_cnca.go  model_lte.go  model_ngc_af.go  model_ngc_oam.go  unregister.go
cnca/cmd/: apply.go  callouts.go  cnca.go  delete.go  get.go  model_cnca.go  patch.go  register.go  subscribe.go  unsubscribe.go
cnca/ui/: Makefile  docker-compose.yml
cnca/ui/cnca/: .env.development  README.md
cnca/ui/cups/: .env.development  Dockerfile  README.md  package.json
http/: README.md  install_nginx.sh
lte/: README.md
lte/backend/: CMakeLists.txt  Makefile  README.md  localcfg.json  setup_env.sh
lte/backend/api_handler/: CMakeLists.txt  CpfInterface.cpp  CpfInterface.h  CupsMgmtInterface.cpp  CupsMgmtInterface.h  HandlerCommon.h  LocalConfig.cpp  LocalConfig.h  UpfController.cpp  UpfController.h  main.cpp
lte/backend/test/api_test/: README.md  del_userplanes_id.sh  del_userplanes_notfound.sh  get_userplanes_all.sh  get_userplanes_id.sh  get_userplanes_notfound.sh  patch_userplanes.json  patch_userplanes.sh  post_userplanes.json  post_userplanes.sh
lte/backend/test/unit_test/: README.md
lte/backend/test/unit_test/scripts/: CMakeLists_oamagent.txt  ut-test  ut_http.conf
lte/backend/test/unit_test/scripts/ssl/: mec.crt  mec.key
lte/backend/test/unit_test/test_app/: CMakeLists.txt  main.cpp
lte/backend/test/unit_test/test_app/common/: TestUtility.cpp  TestUtility.h  TesterBase.cpp  TesterBase.h  TesterFramework.cpp  TesterFramework.h
lte/backend/test/unit_test/test_app/json_payload/: PatchUserplanes.json  PgwGetAPNWRONGRspData.json  PgwGetAllRspData.json  PgwGetIdNotMatchRspData.json  PgwGetOneRspData.json  PgwGetTacNotFoundRspData.json  PostUserplanesPgwNoConfig.json  PostUserplanesPgwNoMNC.json  PostUserplanesPgwNoS5uIpAddress.json  PostUserplanesPgwZeroSelector.json  PostUserplanesSgwNoConfig.json  PostUserplanesWrongFunction.json  SgwGetAllRspData.json  SgwGetNoSgwS1uRspData.json  SgwGetNoSgwS5uRspData.json  SgwGetNoSgwTacRspData.json
lte/backend/test/unit_test/test_app/test_cases/: DelUserplanesTester.cpp  DelUserplanesTester.h  GetUserplanesTester.cpp  GetUserplanesTester.h  PatchUserplanesTester.cpp  PatchUserplanesTester.h  PostUserplanesTester.cpp  PostUserplanesTester.h
lte/backend/utils/: CMakeLists.txt
lte/backend/utils/exception/: CMakeLists.txt  Exception.cpp  Exception.h
lte/backend/utils/framework/: CMakeLists.txt  DelRequestDispatcher.cpp  DelRequestDispatcher.h  DelRequestHandler.h  FcgiBackend.cpp  FcgiBackend.h  GetRequestDispatcher.cpp  GetRequestDispatcher.h  GetRequestHandler.h  PatchRequestDispatcher.cpp  PatchRequestDispatcher.h  PatchRequestHandler.h  PostRequestDispatcher.cpp  PostRequestDispatcher.h  PostRequestHandler.h  RawRequest.cpp  RawRequest.h
lte/backend/utils/log/: CMakeLists.txt  Log.cpp  Log.h
lte/http/: README.md  install_nginx.sh
ngc/: .editorconfig  .golangci.yml  .travis.yml  Makefile  Readme.md  RunNGC.sh
ngc/api/oam/: 5goam_api.yml
ngc/cmd/af/: main.go
ngc/cmd/cn-test/: main.go
ngc/cmd/cntf/: main.go
ngc/cmd/nef/: main.go
ngc/cmd/oam/: main.go
ngc/configs/: Readme.md  af.json  cn-test.json  cntf.json  nef.json  oam.json  oauth2.json
ngc/internal/: Readme.md
ngc/internal/flexcore/: oam_flexcore_backend.go
ngc/pkg/: Readme.md  main.go
ngc/pkg/af/: af.go  af_client.go  af_client_config.go  af_logger.go  af_notifications_client.go  af_notifications_policy_auth.go  af_notifications_ws.go  af_pa_data_validation.go  af_pa_test.go  af_pcf_client.go  af_pcf_client_config.go  af_pcf_pa_client.go  af_pcf_pa_sb_api.go  (+68 more)
ngc/scripts/: Readme.md  genCerts.sh  podAF.yaml  podAFTest.yaml  podNEF.yaml  podNEFTest.yaml  podOAM.yaml  serviceAF.yaml  serviceNEF.yaml
ngc/test/: Readme.md
ui/cnca/: Dockerfile  package.json
ui/cups/: .editorconfig
(+426 files in other folders)
